# kube_testing_rs

./: .gitignore  Cargo.toml  input.css  justfile  tailwind.config.js
assets/: output.css
src/: main.rs
src/router/: home.rs  index.rs  mod.rs  services.rs
templates/components/: icon.html  kube_service.html  kube_services.html  nav-item.html  nav.html
templates/views/: home.html  index.html  services.html
