[package]
name = "kube_testing_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.88.1"
k8s-openapi = { version = "0.21.0", features = ["v1_28"] }
tokio = { version = "1.36.0", features = ["full"] }
tera = "1.19.1"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
